# ai_engineering

./: README.md
Agentic_Design_Patterns/Prompt_Chaining/: main.py  pyproject.toml
Agentic_Design_Patterns/Routing/: main.py  pyproject.toml  routing_adk.py  test.py
Agentic_Design_Patterns/adk/parallelization/: main.py  pyproject.toml
Agentic_Design_Patterns/langchain_examples/: pyproject.toml
deep_researcher/: CLAUDE.md  README.md  main.py  pyproject.toml
deep_researcher/src/: coordinator.py  planner.py  prompt.py  task_splitter.py
deep_researcher/tests/: test_coordinator.py  test_planner.py  test_task_splitter.py
n8n_experiments/: UJkOtkkvV0kh3wqx.json  XDtZ39l3sVK4thp9.json  cSf1KXnKHn9xUqEh.json  gRiwUyMhY5MNmHwQ.json  kgHyOAlZcplFfHRW.json  lkCaLo2XxbWpunaF.json  t31bZwMOrwXudZ0r.json  xvjC36fAOsmK5b00.json
