[project]
name = "routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deprecated>=1.3.1",
    "google-adk>=1.20.0",
    "google-cloud-aiplatform>=1.129.0",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.12.5",
]
